--- a/templates/test.html
+++ b/templates/test.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,16 +11,18 @@
         body{
             overflow-x: hidden;
             margin: 0;
+            background-color: #efefef;
         }
         .contain{
             width: 100vw;
             height: 100vh;
-            background-color: rgb(5, 2, 38);
+            background-color:rgb(48, 47, 82);
             display: flex;
             flex-direction: row;
             overflow-x: hidden;
             justify-content: center;
             align-items: center;
+            transition: linear 1s;
         }
        
         #btn-search{
@@ -30,54 +34,193 @@
             border-radius: 20px;
             color: white;
             outline: none;
+            border: none;
+        }
+        #btn-search:hover{
+            background-color: #e85c5c;
         }
         #id-input{
             display: inline-block;
           border-radius: 50px;
           width: 47vw;
           height: 7vh;
-          background-color: rgba(209, 209, 209, 0.2);
+          background-color: rgb(39, 37, 68);
           outline: none;
           color: white;
           font-size: 22px;
           text-align: center;
           margin-right: 20px;
+          border: solid 1px;
+          border-color: #252548;
+        }
+        #id-input:hover{
+            border-color:#8888c1;
         }
         #tabletest{
-            display: none;
+            border:none;
+            width:70vw;
+            margin:auto;
+            color: black;
         }
         .contain2{
-            background-color: rgb(5, 2, 38);
+            /* background-color: rgb(63, 61, 101); */
             color: white;
+            display: none;
         }
         .table th {
             padding: 0.4rem;
+            text-align: center;
+            background-color: rgb(0, 0, 0);
+            color: white;
+        }
+        .top{
+            position: absolute;
+            top: 0;
+            left: 12vw;
+            width: 76vw;
+            padding-bottom: 3vh;
+            border-bottom: solid 1px;
+            display: flex;
+            flex-direction: row;
+            transition: linear 1s;
+        }
+        .choice{
+            color: #c7c7c7;
+            font-size: 17px;
+            padding-left: 1vw;
+            padding-right: 2vw;
+            padding-top: 3vh;
+            text-align: center;
+            cursor: pointer;
+        }
+        .choice:hover{
+            color: rgb(252, 252, 252);
+        }
+        .choosen{
+            color: white;
+        }
+        
+        .column{
+            display: flex;
+            width: 90vw;
+            margin: 3vh auto;
+            flex-direction: row;
+        }
+        .usercard{
+            height: 80vh;
+            width: 18vw;
+            display: flex;
+            background-color: rgb(48, 47, 82);
+            flex-direction: column;
+            align-items: center;
+        }
+        img {
+            vertical-align: middle;
+            border-style: none;
+            height: 14vh;
+            width: 14vh;
+            margin: 2vh 1vw;
+            border-radius: 50px;
+         }
+         .rowsty{
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            justify-content: space-around;
+         }
+         table tr:nth-child(odd)
+        {
+            background: rgb(250, 251, 252);
+        }
+        table tr:nth-child(even)
+        {
+            background: #c0c0c0;
         }
     </style>
 </head>
 <body>
+    <div class="top" id="top">
+        <div class="choice">logo</div>
+        <div class="choice choosen">首页</div>
+        <div class="choice">用户管理</div>
+        <div class="choice">统计视图</div>
+    </div>
    <div class="contain" id="contain">
-       <input type="text" name="" id="id-input">
+       <input type="text" name="" id="id-input" placeholder="userid">
        <button id="btn-search">Go</button>
        <button id="userinfo">test</button>
-       
    </div>
-   <div class="contain2">
-    <table class="table table-bordered" id='tabletest'>
-        <tr>
-            <th>正文</th>
-            <th>发布位置</th>
-            <th>发布工具</th>
-            <th>点赞数</th>
-            <th>评论数</th>
-            <th>转发数</th>
-        </tr>
-     </table>
+   <div class="contain2" id="contain2">
+    <div class="column">
+        <div class="usercard">
+          <img src="{% static "/imgs/userimage.png" %}" alt="用户">
+          <div style="height: 12vh;">
+            <h4 id="nickname">HZhuozhuooo</h4>
+           
+          </div>
+          <div class="rowsty">
+              <div>
+                <h6>微博数</h6>
+                <p id="weibonum">0</p>
+              </div>
+              <div>
+                <h6>粉丝数</h6>
+                <p id="following">0</p>
+              </div>
+              <div>
+                <h6>关注数</h6>
+                <p id="follower">0</p>
+              </div>
+          </div>
+          <div class="result">
+            <div>
+               <span>共获取用户微博：</span> 
+               <span id="getnum">0条</span>
+            </div>
+            <div>
+              <span>状态：</span>
+              <span id="status">正常</span>
+            </div>
+          </div>
+        </div>
+
+        
+        <table class="table table-bordered" id='tabletest'>
+          <tr>
+              <th>正文</th>
+              <th>发布位置</th>
+              <th>发布工具</th>
+              <th>点赞数</th>
+              <th>评论数</th>
+              <th>转发数</th>
+          </tr>
+         </table>
+      </div>
    </div>
-   <script src="https://gw.alipayobjects.com/os/antv/assets/lib/jquery-3.2.1.min.js"></script>
-   
-   <script type="text/javascript" src="https://cdn.bootcss.com/jquery/1.4.0/jquery.js"></script>
+   <div class="modal fade" id="loadingModal" backdrop="static" keyboard="false">
+    <div style="width: 200px;height:100px; z-index: 20000; position: absolute; text-align: center; left: 50%; top: 50%;margin-left:-100px;margin-top:-10px">　　
+        <div class="progress progress-striped active"
+             style="margin-bottom: 0;height:50px; text-align:center;line-height: 50px;font-size:large;">
+              数据加载中....　　　　
+        </div>
+    </div>
+</div>
+   <script src="/static/jquery-3.3.1.min.js"></script>
+<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
    <script>
+       showLoading = function ()
+    {
+         $('#loadingModal').modal({backdrop: 'static', keyboard: false});
+    }
+    //隐藏掉loading框
+    hideLoading = function ()
+    {
+         $('#loadingModal').modal('hide');
+         print("hide")
+    }
     $("#btn-search").click(function () {
         var userid = $("#id-input").val()
         if(userid!=" "){
@@ -89,27 +232,36 @@
                 user_id : userid,
             },
             dataType: 'json',
+            beforeSend:function(){
+                  showLoading()
+            },
+            complete: function(){
+                  hideLoading()
+            },
             success:(res) =>{
                 console.log(res);
                 var table = document.getElementById("tabletest"),
                 trs = table.getElementsByTagName("tr");
                 for(var i = trs.length - 1; i > 0; i--) {
-                     table.deleteRow(i);
+                     table.deleteRow(i)
                 }
-                $("#tabletest").css({
-                    'display':'block',
-                    "width":"90vw",
-                    "margin": "auto",})
-                $("#contain").css({
-                    "height":"10vh",
-                    "justify-content": "left",
-                    "padding-left":"4vw", })
-
+                $("#top").css({"left":"4vw","width": "auto","border":"none",})
+                $("#id-input").css({ "width":"34vw", "height":"6vh","margin-left":"30vw",})
+                $("#btn-search").css({ "width":"7vw", "height":"6vh",})
+                $("#contain").css({ "height":"10vh","justify-content": "left","padding-left":"4vw",})
+                $("#contain2").css({"display":"block",})
+                $("#nickname").html(res[0].nickname)
+                $("#status").html(res[0].status)
+                $("#weibonum").html(res[0].weibonum)
+                $("#following").html(res[0].following)
+                $("#follower").html(res[0].follower)
+                $("#getnum").html(res.length+"条")
                 for(i in res) {
+                  if(i==0) continue
                   var tr;
-                  tr='<td>'+res[i].content.substring(0,30)+"..."+'</td>'+'<td>'+res[i].publish_place+'</td>'+'<td>'+res[i].publish_tool+'</td>'+'<td>'+res[i].approved_num+'</td>'+'<td>'+res[i].comment_num+'</td>'+'<td>'+res[i].transmit_num+'</td>'
+                  tr='<td>'+res[i].content.substring(0,50)+"..."+'</td>'+'<td>'+res[i].publish_place+'</td>'+'<td>'+res[i].publish_tool+'</td>'+'<td>'+res[i].approved_num+'</td>'+'<td>'+res[i].comment_num+'</td>'+'<td>'+res[i].transmit_num+'</td>'
                   $("#tabletest").append('<tr>'+tr+'</tr>')
-                  if(i>10){
+                  if(i>20){
                     tr='<td>'+"..."+'</td>'+'<td>'+"..."+'</td>'+'<td>'+"..."+'</td>'+'<td>'+"..."+'</td>'+'<td>'+"..."+'</td>'+'<td>'+"..."+'</td>'
                     $("#tabletest").append('<tr>'+tr+'</tr>')
                     break
@@ -125,6 +277,8 @@
             alert("输入不能为空")
         }
      });
+
+
      $("#userinfo").click(function () {
         var userid = $("#id-input").val()
         if(userid!=" "){
@@ -137,8 +291,7 @@
             },
             dataType: 'json',
             success:(res) =>{
-                console.log(res);
-                
+                console.log(res);   
             },
             error:(err) =>{
                 console.log(err);
